# Finances

./: CMakeLists.txt  configure.bat  main.cpp  start.bat
include/finances/entities/: account_interface.hpp  category_interface.hpp  operation_interface.hpp
include/finances/storage/: account_interface.hpp  category_interface.hpp  operation_interface.hpp
include/finances/utils/: types.hpp
src/: main.cpp
src/finances/entities/: account.cpp  account.hpp  category.cpp  category.hpp  operation.cpp  operation.hpp
src/finances/storage/: account.cpp  account.hpp  category.cpp  category.hpp  operation.cpp  operation.hpp
ui/: CategoryCost.qml  CategoryCostList.qml  main.qml  qml.qrc
